--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "liqpay": "^0.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "telegraf": "^4.16.3",
     "vue": "^3.2.13",
