--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.19.2",
     "liqpay": "^0.0.1",
     "multer": "^1.4.5-lts.1",
